--- a/puslapis su lentele.html
+++ b/puslapis su lentele.html
@@ -21,13 +21,13 @@
                 </td>
             </tr>
             <tr>
-                <td>Kriauses</td>
+                <td>Obuolys</td>
                 <td>
                     <img src="http://www.sos03.lt/files/imagecache/test/images/Tikras%20obuolys%20obuolys.jpg" width="200px" alt="jeigu nerodo tada nezinau ka daryt"
                     />
                 </td>
 
-                <td>Kriauses &#150 b&#363;dingas obel&#371; vaisius, morfologi&#353;kai irgi vadinamas obuoliu. Obuolyje yra
+                <td>Obuolys &#150 b&#363;dingas obel&#371; vaisius, morfologi&#353;kai irgi vadinamas obuoliu. Obuolyje yra
                     3-5 lizdai su 2-3 s&#279;klomis lizde. Vaisiaus luobel&#279; labai plona, mink&#353;timas sultingas,
                     be sukiet&#279;jusi&#371; l&#261;steli&#371;. Prinok&#281; obuoliai b&#363;na raudoni, geltoni, &#382;alsvi
                     ar &#303;vairiaspalviai. Ma&#382;ais obuoliais &#303;vardijami pagal prigimt&#303; ma&#382;i obuoliai
